Add batch mode and bump version for docs update

--- a/Dockerfile.batch
+++ b/Dockerfile.batch
@@ -2,11 +2,14 @@ FROM python:3
 
 LABEL version="0.5"
 LABEL description="Produce charts and data files of Agile metrics extracted \
-from JIRA."
+from JIRA in a batch."
 
 # Install requirments first to make future rebuilds faster
 COPY ./requirements.txt /requirements.txt
 RUN pip install --no-cache-dir -r /requirements.txt
+
+# Config will be read from /config
+VOLUME /config
 
 # Outputs will be written to the /data volume 
 WORKDIR /data
@@ -19,4 +22,8 @@ RUN pip install --no-cache-dir /app
 # Run with a headless matplotlib backend
 ENV MPLBACKEND="agg"
 
-ENTRYPOINT ["jira-agile-metrics"]
+# Add entry point, which runs `jira-agile-metrics` for each config file
+ADD docker-scripts/batch-entrypoint.sh /batch-entrypoint.sh
+RUN chmod +x /batch-entrypoint.sh
+
+ENTRYPOINT ["/batch-entrypoint.sh"]
