Make it easier to control test output for debugging the HTML report

--- a/.gitignore
+++ b/.gitignore
@@ -90,5 +90,6 @@ ENV/
 
 # Mac files
 **/.DS_Store
-progress.html
-progress-minimal.html
+
+# Debug outputs that should not be committed
+progress*.html
